# anomaly_detection_development

./: .gitignore  README.md  table_comment.xlsx
GNNAD/GNNAD_training/: GNNAD_analysis.ipynb  GNNAD_cross_validation.ipynb  api_input.txt  data_drift_report.html  for_cross_validation.csv  metrics_summary.txt  model_state_dict.pt  model_state_dict.pth  pyproject.toml  requirements.txt
GNNAD/GNNAD_training/modules/api_functions/: gnnad_train_functions.py
GNNAD/GNNAD_training/modules/gnnad/: GDN.py  cross_val_func.py  graphanomaly_cleaned.py  plot.py  utils.py
GNNAD/GNNAD_training/modules/preprocessing_modules/: data_preprocessing.py
GNNAD/GNNAD_training/weights/: last_trained_model.pt
GNNAD/preprocess_data_short/: Dockerfile  for_cross_validation.csv  prepare_labeled_data.ipynb  prepare_raw_input.ipynb  preprocessing_notebook.ipynb  requirements.txt  util_functions.py
GNNAD/preprocess_data_short/model_training_files/: data_preprocessing.py
