[tool.poetry]
name = "gnnad"
version = "0.1.1"
description = "Graph Neural Network-Based Anomaly Detection (GNNAD)"
authors = ["Katie Buchhorn"]
maintainers = ["Katie Buchhorn"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/KatieBuc/gnnad"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.3"
numpy = "^1.24.2"
gstools = "^1.4.1"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
torch = {version = "2.0.0+cu118", source = "torch118"}
torch-geometric = "^2.3.0"
torchsummary = "^1.5.1"

[[tool.poetry.source]]
name = "torch118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.2.2"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
